# ue5-docs-mcp

./: .gitattributes  .gitignore  .mcp.json.template  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LLM_INTEGRATION.md  README.md  llms.txt  mkdocs.yml  pending-routes.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  scraper_failure.md
.github/workflows/: deploy.yml
FAILURES/: index.html
INDEX/: index.html
RETRY-REPORT/: index.html
en-us/unreal-engine/07-adjust-environment-lighting-features/: index.html
en-us/unreal-engine/2d-in-unreal-engine/: index.html
en-us/unreal-engine/2d-settings-in-the-unreal-engine-project-settings/: index.html
en-us/unreal-engine/3d-text-actor-in-unreal-engine/: index.html
en-us/unreal-engine/abilities-in-lyra-in-unreal-engine/: index.html
en-us/unreal-engine/academic-installation-of-unreal-engine/: index.html
en-us/unreal-engine/accessing-logs-and-crash-reports-on-ios-and-tvos-in-unreal-engine/: index.html
en-us/unreal-engine/accessing-unreal-engine-with-perforce/: index.html
en-us/unreal-engine/achievements-interface-in-unreal-engine/: index.html
en-us/unreal-engine/activating-and-using-mesh-paint-mode-in-unreal-engine/: index.html
en-us/unreal-engine/activating-the-virtual-scouting-legacy-tools/: index.html
en-us/unreal-engine/actor-communication-in-unreal-engine/: index.html
en-us/unreal-engine/actor-editor-context-in-unreal-engine/: index.html
en-us/unreal-engine/actor-mobility-in-unreal-engine/: index.html
mcp_server/: __init__.py  server.py
scripts/: build_guide.py
(+3432 files in other folders)
